# jags_pangolin

./: LICENSE  README.txt  pyproject.toml
jags_pangolin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/jags_pangolin/: __init__.py  api.py  engine.py
src/jags_pangolin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jags_pangolin/Backend/: Multi_funcs.py  flow.py  index.py  scalar_ops.py
test_files/: test_Multi_funcs.py  test_Scalar_ops.py  test_blackjax.py  test_class  test_class.py  test_flow.py  test_index.py
