[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jags_pangolin"
version = "0.1.0"
description = "Python interface for running JAGS models"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Long Nguyen" }
]
readme = "README.md"
dependencies = [
    "pangolin @ git+https://github.com/justindomke/pangolin.git@main"
]

[tool.setuptools.packages.find]
where = ["src"]